--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
       <a class="navbar-brand" href="#">Monitor Websites</a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
-          <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModalHorizontal">
+          <button class="btn btn-primary btn-lg" data-toggle="modal" >
             Add Website
           </button>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/refresh">Refresh</a>
+          <a class="nav-link" href="#">Refresh</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Stop Monitoring</a>
